--- a/gatewayserver/gateway-server.yml
+++ b/gatewayserver/gateway-server.yml
@@ -18,3 +18,12 @@ spring:
             locator:
               enabled: true
               lowerCaseServiceId: true
+
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoints:
+    gateway:
+      access: unrestricted              
