--- a/gatewayserver/gateway-server.yml
+++ b/gatewayserver/gateway-server.yml
@@ -24,13 +24,13 @@ spring:
                   - Path=/licsvc/**
                 uri: lb://LICENSE-SERVICE
                 filters:
-                  - RewritePath=/licsvc/(?<segment>.*), /v1/$\{segment}
+                  - RewritePath=/licsvc/(?<segment>.*), /v1/${segment}
               - id: organization-service
                 predicates:
                   - Path=/orgsvc/**
                 uri: lb://ORGANIZATION-SERVICE
                 filters:
-                  - RewritePath=/orgsvc/(?<segment>.*), /v1/$\{segment}
+                  - RewritePath=/orgsvc/(?<segment>.*), /v1/${segment}
 
 management:
   endpoints:
