--- a/gatewayserver/gateway-server.yml
+++ b/gatewayserver/gateway-server.yml
@@ -22,13 +22,13 @@ spring:
               - id: license-service
                 predicates:
                   - Path=/licsvc/**
-                uri: lb://LICENSE-SERVICE
+                uri: lb://license-service
                 filters:
                   - RewritePath=/licsvc/(?<segment>.*), /v1/${segment}
               - id: organization-service
                 predicates:
                   - Path=/orgsvc/**
-                uri: lb://ORGANIZATION-SERVICE
+                uri: lb://organization-service
                 filters:
                   - RewritePath=/orgsvc/(?<segment>.*), /v1/${segment}
 
