--- a/gatewayserver/gateway-server.yml
+++ b/gatewayserver/gateway-server.yml
@@ -20,15 +20,15 @@ spring:
               lowerCaseServiceId: true
             routes:
               - id: license-service
+                uri: lb://LICENSE-SERVICE
                 predicates:
                   - Path=/licsvc/**
-                uri: lb://license-service
                 filters:
                   - RewritePath=/licsvc/(?<segment>.*), /v1/${segment}
               - id: organization-service
                 predicates:
                   - Path=/orgsvc/**
-                uri: lb://organization-service
+                uri: lb://ORGANIZATION-SERVICE
                 filters:
                   - RewritePath=/orgsvc/(?<segment>.*), /v1/${segment}
 
