--- a/gatewayserver/gateway-server.yml
+++ b/gatewayserver/gateway-server.yml
@@ -18,19 +18,19 @@ spring:
             locator:
               enabled: true
               lowerCaseServiceId: true
-            routes:
-              - id: license-service
-                predicates:
-                  - Path=/licsvc/**
-                uri: lb://LICENSE-SERVICE
-                filters:
-                  - RewritePath=/licsvc/(?<segment>.*), /$\{segment}
-              - id: organization-service
-                predicates:
-                  - Path=/orgsvc/**
-                uri: lb://ORGANIZATION-SERVICE
-                filters:
-                  - RewritePath=/orgsvc/(?<segment>.*), /v1/${segment}
+          routes:
+            - id: license-service
+              predicates:
+                - Path=/licsvc/**
+              uri: lb://LICENSE-SERVICE
+              filters:
+                - RewritePath=/licsvc/(?<segment>.*), /v1/${segment}
+            - id: organization-service
+              predicates:
+                - Path=/orgsvc/**
+              uri: lb://ORGANIZATION-SERVICE
+              filters:
+                - RewritePath=/orgsvc/(?<segment>.*), /v1/${segment}
 
 management:
   endpoints:
